# engine

./: .gitignore  AGENTS.md  Cargo.toml  GPU_DLL_UNIFICATION_PLAN.md  LICENSE  NOTICES.md  README.md
.github/workflows/: macos-arm64.yml  release-all.yml  ubuntu-x64.yml  windows-cuda13.yml  windows-x64.yml
bridge/: CMakeLists.txt  README.md  UPSTREAM_PATCH.md  llama_server_bridge.cpp  llama_server_bridge.h  llama_server_bridge_realtime_smoke.cpp
diarize/: README.md
diarize/addons/: README.md
diarize/addons/overlay/llama.cpp/tools/: CMakeLists.txt
diarize/addons/overlay/llama.cpp/tools/pyannote/: CMakeLists.txt  pyannote-align.cpp  pyannote-diarize.cpp
diarize/addons/overlay/llama.cpp/tools/realtime/: CMakeLists.txt  audio-ring.cpp  audio-ring.h  backend-factory.cpp  backend-factory.h  realtime-smoke.cpp  stream-backend.h  stream-events.h  stream-manager.cpp  stream-manager.h  stream-session.cpp  stream-session.h
diarize/addons/overlay/llama.cpp/tools/realtime/sortformer/: sortformer-audio.cpp  sortformer-audio.h  sortformer-backend.cpp  sortformer-backend.h  sortformer-encoder.cpp  sortformer-encoder.h  sortformer-frontend.cpp  sortformer-frontend.h  sortformer-gguf.cpp  sortformer-gguf.h  sortformer-layer0.cpp  sortformer-layer0.h  sortformer-model.cpp  sortformer-model.h  sortformer-postnet.cpp  sortformer-postnet.h  sortformer-postprocess.cpp  sortformer-postprocess.h  sortformer-preencode.cpp  sortformer-preencode.h  sortformer-schema.cpp  sortformer-schema.h  sortformer-state.cpp  sortformer-state.h  sortformer-streaming.cpp  sortformer-streaming.h
diarize/addons/overlay/llama.cpp/tools/realtime/voxtral/: voxtral-backend.cpp  voxtral-backend.h  voxtral-runtime.cpp  voxtral-runtime.h
diarize/addons/overlay/llama.cpp/tools/server/: CMakeLists.txt  server-context.cpp  server-context.h
diarize/addons/overlay/llama.cpp/tools/whisper/: whisper-cli-entrypoint.cpp  whisper-common-audio.cpp
diarize/addons/patches/: 0001-whisper-pyannote-whispercpp.patch  0300-llama-unified-audio.meta.txt  0300-llama-unified-audio.patch  0301-llama-tools-server.patch  0302-llama-request-reasoning.patch
diarize/scripts/: apply_llama_overlay.ps1  build_unified_audio_stack_cuda.ps1
docs/: README.md  bridge-audio-dll.md  bridge-chat-dll.md  bridge-embeddings-dll.md  bridge-rerank-dll.md  bridge-vlm-dll.md  common-runtime-and-devices.md  pdf-dll.md  pdfvlm-dll.md
engine/: Cargo.toml  build.rs
engine/src/: audio_assembler.rs  audio_orchestrator.rs  llama_bridge.rs  main.rs
extras/: README.md  convert_pyannote_checkpoint_to_gguf.py  convert_pyannote_npz_to_gguf.py  convert_pyannote_to_gguf.ps1  extract_cpp_embedded_licenses.ps1  extract_cpp_licenses.ps1  license_audit.ps1  release_inventory.ps1  update_upstreams.ps1
pdf/: Cargo.toml
pdf/src/: core.rs  lib.rs
pdfvlm/: Cargo.toml  build.rs
pdfvlm/src/: lib.rs  llama_bridge_ffi.rs  pdf_to_markdown.rs
