[package]
name = "pdfvlm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
pdfium-render = { version = "0.8.37", default-features = false, features = ["pdfium_latest", "thread_safe", "image"] }
image = { version = "0.25", default-features = true, features = ["png"] }
encoding_rs = "0.8"
